# chip8

./: .gitignore  README.md  meson.build
include/raylib/: raygui.h
resources/: screen.glsl
src/: chip8.c  chip8.h  chip8_internal.c  chip8_internal.h  data.c  defines.h  main.c  raygui_impl.c  util.c  util.h
